APP, 天気、現在天気コンポーネントのテストを実装

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div style="text-align:center">
   <h1>
-    LocalCast Weather
+    <span>LocalCast Weather</span>
   </h1>
   <div>Your city, your forecast, right now!</div>
   <h2>Current Weather</h2>
   <app-current-weather></app-current-weather>
 </div>
 
-<router-outlet></router-outlet>
